--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-REACT_APP_
+VITE_apiKey=AIzaSyA4TRU8YhIQ2d6onhvADJSiYj-LgXmVL00
+VITE_authDomain=proyecto-final-3bcfa.firebaseapp.com
+VITE_projectId=proyecto-final-3bcfa
+VITE_storageBucket=proyecto-final-3bcfa.appspot.com
+VITE_messagingSenderId=27580455388
+VITE_appId=1:27580455388:web:93c043bd4a8798cdbf5719
